crates/rome_cli/tests/snapshots/main_commands_lint/should_apply_correct_file_source.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  }
}
```

## `file.ts`

```ts
type A = { a: string }; type B = Partial<A>
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


