crates/rome_cli/tests/snapshots/main_commands_lint/should_disable_a_rule.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
debugger;

```

## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "suspicious": {
            "noDebugger": "off"
        }
    }
  }
}
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


