crates/rome_cli/tests/snapshots/main_commands_lint/should_not_enable_all_recommended_rules.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "organizeImports": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "a11y": {},
      "complexity": {},
      "correctness": {},
      "performance": {},
      "security": {},
      "style": {},
      "suspicious": {}
    }
  }
}
```

## `fix.js`

```js

    		LOOP: for (const x of xs) {
    		    if (x > 0) {
    		        break;
    		    }
    		    f(x);
    		}
		
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


