crates/rome_cli/tests/snapshots/main_commands_lint/should_not_enable_nursery_rules.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "organizeImports": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true,
      "nursery": {
        "noAccumulatingSpread": "error"
      }
    }
  }
}
```

## `fix.ts`

```ts
const bannedType: Boolean = true;
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


