crates/rome_cli/tests/snapshots/main_commands_lint/should_pass_if_there_are_only_warnings.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
class A {};
A = 0;

```

## `rome.json`

```json

{
  "linter": {
    "rules": {
        "recommended": true,
        "suspicious": {
            "noClassAssign": "warn"
        }
    }
  }
}
        
```

# Emitted Messages

```block
file.js:2:1 lint/suspicious/noClassAssign ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! 'A' is a class.
  
    1 │ class A {};
  > 2 │ A = 0;
      │ ^
    3 │ 
  
  i 'A' is defined here.
  
  > 1 │ class A {};
      │       ^
    2 │ A = 0;
    3 │ 
  

```

```block
Fixed 1 file(s) in <TIME>
```


